--- a/common-android-utils/src/main/res/layout/view_stars.xml
+++ b/common-android-utils/src/main/res/layout/view_stars.xml
@@ -9,7 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <common.android.utils.ui.components.HeightSquaredImageView
+        <com.com.common.android.utils.ui.components.HeightSquaredImageView
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -20,7 +20,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HeightSquaredImageView
+        <com.common.android.utils.ui.components.HeightSquaredImageView
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -31,7 +31,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HeightSquaredImageView
+        <com.common.android.utils.ui.components.HeightSquaredImageView
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -42,7 +42,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HeightSquaredImageView
+        <com.common.android.utils.ui.components.HeightSquaredImageView
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -53,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HeightSquaredImageView
+        <com.common.android.utils.ui.components.HeightSquaredImageView
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <common.android.utils.ui.components.HorizontalClippingImageView
+        <com.common.android.utils.ui.components.HorizontalClippingImageView
                 android:id="@+id/full_star0"
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
@@ -78,7 +78,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HorizontalClippingImageView
+        <com.common.android.utils.ui.components.HorizontalClippingImageView
                 android:id="@+id/full_star1"
                 android:scaleType="fitCenter"
                 android:layout_width="wrap_content"
@@ -90,7 +90,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HorizontalClippingImageView
+        <com.common.android.utils.ui.components.HorizontalClippingImageView
                 android:id="@+id/full_star2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -101,7 +101,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HorizontalClippingImageView
+        <com.common.android.utils.ui.components.HorizontalClippingImageView
                 android:id="@+id/full_star3"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -112,7 +112,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.1"/>
 
-        <common.android.utils.ui.components.HorizontalClippingImageView
+        <com.common.android.utils.ui.components.HorizontalClippingImageView
                 android:id="@+id/full_star4"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
