--- a/common-android-utils/src/main/res/layout/custom_toolbar.xml
+++ b/common-android-utils/src/main/res/layout/custom_toolbar.xml
@@ -27,7 +27,7 @@
             android:longClickable="false"
             android:text="Title"
             android:gravity="center"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:id="@+id/actionbar_title"
             android:layout_width="match_parent"
